--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
       </div>
     </div>
 
+    <footer>
+      <a href="https://github.com/GhazaalAsh/Weather-App" target="_blank"
+        >Open-source code</a
+      >
+      by Ghazaleh Ashrafi
+    </footer>
+
     <script src="index.js"></script>
   </body>
 </html>
