--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700;1,8..144,800;1,8..144,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather Forecast</title>
   </head>
   <body>
@@ -58,27 +58,22 @@
 
           <div class="row">
             <div class="col">
-              <h1>
+              <div class="mainPrediction">
+                <span class="mainEmoji">⛈</span>
                 <span id="celsius"></span
                 ><span class="temperature" id="units">
                   <a href="" id="celsius-temp">°C</a>|<a href="" id="fahrenheit"
                     >°F</a
                   ></span
                 >
-              </h1>
+              </div>
             </div>
             <div class="col">
               <p class="percents">
-                Precipitation: 5%
-                <br />
                 Humidity: <span id="humidity"></span>%
                 <br />
                 Wind: <span id="wind"></span> km/h
               </p>
-            </div>
-
-            <div class="col">
-              <div class="mainEmoji">⛈</div>
             </div>
 
             <div class="col">
@@ -97,17 +92,12 @@
         </div>
       </div>
 
-      <div class="row moreInfo">
-        <div class="col-4">
-          <a href="" class="linkDescription">Temperature</a>
+      <div class="moreInfo">
+        <div class="btn-group" role="group" aria-label="Basic outlined example">
+          <button type="button" class="btn">Temperature</button>
+          <button type="button" class="btn">Wind</button>
         </div>
-        <div class="col-4">
-          <a href="" class="linkDescription">Precipitation</a>
-        </div>
-        <div class="col-4"><a href="" class="linkDescription">Wind</a></div>
       </div>
-
-      <hr />
 
       <div class="temperature">
         <div class="row">
@@ -173,6 +163,6 @@
       by Ghazaleh Ashrafi
     </footer>
 
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
