--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="col-12">
           <section class="form">
             <form class="row row-cols-lg-auto g-3 align-items-center">
-              <div class="col-12">
+              <div class="col-9">
                 <input
                   type="text"
                   class="searchWidth"
@@ -45,13 +45,8 @@
                   id="search-input"
                 />
               </div>
-              <div class="col-6">
+              <div class="col-3">
                 <button type="submit" class="button">Search</button>
-              </div>
-              <div class="col-6">
-                <button type="submit" class="button" id="currentLocation">
-                  Current Location
-                </button>
               </div>
             </form>
           </section>
@@ -99,7 +94,7 @@
         </div>
       </div>
 
-      <div class="temperature">
+      <div class="hourly-forecast">
         <div class="row">
           <div class="col">-3°C</div>
           <div class="col">-2°C</div>
