Add Real Feel and Min and Max

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col detail">
+          L:<span id="min-temp"></span>°C/H:<span id="max-temp"></span>°C
+        </div>
+        <div class="col">
+          <div class="detail">
+            <div class="feels">Real Feel <span id="feels"></span>°C</div>
+          </div>
+        </div>
+      </div>
+
       <div class="moreInfo">
         <div class="btn-group" role="group" aria-label="Basic outlined example">
           <button type="button" class="btn">Temperature</button>
