--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700;1,8..144,800;1,8..144,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
@@ -67,7 +67,8 @@
               <p class="percents">
                 Humidity: <span id="humidity"></span>%
                 <br />
-                Wind: <span id="wind"></span> km/h
+                Wind: <span id="wind"></span> Km/h
+                <span class="windDegree" id="wind-degree"></span>
               </p>
             </div>
 
@@ -96,6 +97,7 @@
             <div class="feels">Real Feel <span id="feels"></span>°C</div>
           </div>
         </div>
+        <div class="col detail">Pressure <span id="pressure"> </span> mb</div>
       </div>
 
       <div class="moreInfo">
@@ -169,6 +171,6 @@
       by Ghazaleh Ashrafi
     </footer>
 
-    <script src="src/index.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
