--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <br />
                   <span id="date"></span>
                   <br />
-                  <span id="description"></span>
+                  <span id="description" class="description"></span>
                 </p>
               </section>
             </div>
