--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/74fbb2a2e8.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,59 +36,55 @@
         </div>
       </header>
 
+      <form>
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search for a city..."
+            id="search-input"
+          />
+          <button class="btn btn-outline-secondary" type="submit">
+            Search
+          </button>
+          <button class="btn btn-outline-secondary" type="button">
+            <i class="fa-solid fa-location-dot"></i>
+          </button>
+        </div>
+      </form>
+
       <div class="row">
-        <div class="col-12">
-          <section class="form">
-            <form class="row row-cols-lg-auto g-3 align-items-center">
-              <div class="col-9">
-                <input
-                  type="text"
-                  class="searchWidth"
-                  placeholder="Search for a city..."
-                  autocomplete="off"
-                  id="search-input"
-                />
-              </div>
-              <div class="col-3">
-                <button type="submit" class="button">Search</button>
-              </div>
-            </form>
-          </section>
-
-          <div class="row">
-            <div class="col">
-              <div class="mainPrediction">
-                <span class="mainEmoji">⛈</span>
-                <span id="celsius"></span
-                ><span class="temperature" id="units">
-                  <a href="" id="celsius-temp">°C</a>|<a href="" id="fahrenheit"
-                    >°F</a
-                  ></span
-                >
-              </div>
-            </div>
-            <div class="col">
-              <p class="percents">
-                Humidity: <span id="humidity"></span>%
-                <br />
-                Wind: <span id="wind"></span> Km/h
-                <span class="windDegree" id="wind-degree"></span>
-              </p>
-            </div>
-
-            <div class="col">
-              <section class="detailedDescription">
-                <p class="detail">
-                  <span id="city"></span>
-                  <span id="country"></span>
-                  <br />
-                  <span id="date"></span>
-                  <br />
-                  <span id="description" class="description"></span>
-                </p>
-              </section>
-            </div>
+        <div class="col">
+          <div class="mainPrediction">
+            <span class="mainEmoji">⛈</span>
+            <span id="celsius"></span
+            ><span class="temperature" id="units">
+              <a href="" id="celsius-temp">°C</a>|<a href="" id="fahrenheit"
+                >°F</a
+              ></span
+            >
           </div>
+        </div>
+        <div class="col">
+          <p class="percents">
+            Humidity: <span id="humidity"></span>%
+            <br />
+            Wind: <span id="wind"></span> Km/h
+            <span class="windDegree" id="wind-degree"></span>
+          </p>
+        </div>
+
+        <div class="col">
+          <section class="detailedDescription">
+            <p class="detail">
+              <span id="city"></span>
+              <span id="country"></span>
+              <br />
+              <span id="date"></span>
+              <br />
+              <span id="description" class="description"></span>
+            </p>
+          </section>
         </div>
       </div>
 
@@ -163,14 +163,12 @@
         </div>
       </div>
     </div>
-
     <footer>
       <a href="https://github.com/GhazaalAsh/Weather-App" target="_blank"
         >Open-source code</a
       >
       by Ghazaleh Ashrafi
     </footer>
-
     <script src="src/app.js"></script>
   </body>
 </html>
