Turn Auto complete off

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             class="form-control"
             placeholder="Search for a city..."
             id="search-input"
+            autocomplete="off"
           />
           <button class="btn btn-outline-secondary" type="submit">
             Search
