Add London and New York Link

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           <div class="col-2">
             <a href="" class="linkDescription" id="paris">Paris</a>
           </div>
-          <div class="col-2"><a href="" class="linkDescription">London</a></div>
+          <div class="col-2">
+            <a href="" class="linkDescription" id="london">London</a>
+          </div>
           <div class="col-4">
-            <a href="" class="linkDescription">New York</a>
+            <a href="" class="linkDescription" id="new-York">New York</a>
           </div>
         </div>
       </header>
@@ -98,7 +100,10 @@
 
       <div class="row">
         <div class="col detail">
-          L:<span id="min-temp"></span>°C/H:<span id="max-temp"></span>°C
+          <ul>
+            <li>L:<span id="min-temp"></span>°C</li>
+            <li>H:<span id="max-temp"></span>°C</li>
+          </ul>
         </div>
         <div class="col">
           <div class="detail">
