--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>Weather Forecast</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="background">
       <header class="cities">
         <div class="row">
           <div class="col-2">
@@ -96,7 +96,7 @@
           <section class="detailedDescription">
             <ul class="detail">
               <li><span id="city"></span> <span id="country"></span></li>
-              <li><span id="date"></span></li>
+              <li><span id="date-id"></span></li>
             </ul>
           </section>
         </div>
