--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </span>
             <span id="celsius"></span
             ><span class="temperature" id="units">
-              <a href="" id="celsius-temp" class="deactive">°C</a>|<a
-                href=""
+              <a href="#" id="celsius-temp" class="deactive">°C</a>|<a
+                href="#"
                 id="fahrenheit"
                 >°F</a
-              ></span
-            >
+              >
+            </span>
           </div>
         </div>
         <div class="col-3 percents">
