Add Background and Color

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="container" id="background">
-      <header class="cities">
+      <header class="cities" id="cities">
         <div class="row">
           <div class="col-2">
             <a href="" class="linkDescription" id="paris">Paris</a>
@@ -71,8 +71,9 @@
             </span>
             <span id="celsius"></span
             ><span class="temperature" id="units">
-              <a href="#" id="celsius-temp" class="deactive">°C</a>|<a
+              <a href="#" id="celsius-temp" class="deactive templink">°C</a>|<a
                 href="#"
+                class="templink"
                 id="fahrenheit"
                 >°F</a
               >
