Update Night Design

--- a/index.html
+++ b/index.html
@@ -71,12 +71,9 @@
             </span>
             <span id="celsius"></span
             ><span class="temperature" id="units">
-              <a href="#" id="celsius-temp" class="deactive templink">°C</a>|<a
-                href="#"
-                class="templink"
-                id="fahrenheit"
-                >°F</a
-              >
+              <a href="#" id="celsius-temp" class="deactive templink">°C</a>
+              <span class="colorChange" id="colorChange">|</span
+              ><a href="#" class="templink" id="fahrenheit">°F</a>
             </span>
           </div>
         </div>
@@ -120,8 +117,8 @@
 
       <div class="moreInfo">
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-          <button type="button" class="btn">Temperature</button>
-          <button type="button" class="btn">Wind</button>
+          <button type="button" class="btn" id="btnTemp">Temperature</button>
+          <button type="button" class="btn" id="btnWind">Wind</button>
         </div>
       </div>
 
