--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col detail">Pressure <span id="pressure"> </span> mb</div>
       </div>
-
+      <hr />
       <div class="moreInfo">
         <div class="btn-group" role="group" aria-label="Basic outlined example">
           <button type="button" class="btn" id="btnTemp">Temperature</button>
@@ -122,36 +122,9 @@
         </div>
       </div>
 
-      <div class="hourly-forecast">
-        <div class="row">
-          <div class="col">-3°C</div>
-          <div class="col">-2°C</div>
-          <div class="col">-6°C</div>
-          <div class="col">-8°C</div>
-          <div class="col">-11°C</div>
-          <div class="col">-13°C</div>
-          <div class="col">-9°C</div>
-          <div class="col">-5°C</div>
-        </div>
-      </div>
+      <div class="hourly-forecast" id="hourrly-forecast"></div>
 
-      <br />
-      <br />
-      <br />
-
-      <div class="hours">
-        <div class="row">
-          <div class="col">14:00</div>
-          <div class="col">17:00</div>
-          <div class="col">20:00</div>
-          <div class="col">23:00</div>
-          <div class="col">02:00</div>
-          <div class="col">05:00</div>
-          <div class="col">08:00</div>
-          <div class="col">11:00</div>
-        </div>
-      </div>
-
+      <hr />
       <div class="emojise">
         <div class="row">
           <div class="col">☁</div>
