Update Daily Forecast

--- a/index.html
+++ b/index.html
@@ -125,31 +125,8 @@
       <div class="hourly-forecast" id="hourrly-forecast"></div>
 
       <hr />
-      <div class="emojise">
-        <div class="row">
-          <div class="col">☁</div>
-          <div class="col">☁</div>
-          <div class="col">🌨</div>
-          <div class="col">🌨</div>
-          <div class="col">❄</div>
-          <div class="col">❄</div>
-          <div class="col">🌨</div>
-          <div class="col">⛅</div>
-        </div>
-      </div>
 
-      <div class="minMax">
-        <div class="row">
-          <div class="col">-1° -12°</div>
-          <div class="col">-1° -14°</div>
-          <div class="col">-2° -14°</div>
-          <div class="col">-1° -13°</div>
-          <div class="col">-1° -15°</div>
-          <div class="col">-2° -16°</div>
-          <div class="col">-2° -17°</div>
-          <div class="col">-3° -16°</div>
-        </div>
-      </div>
+      <div class="daily-forecast" id="daily-forecast"></div>
     </div>
     <footer>
       <a href="https://github.com/GhazaalAsh/Weather-App" target="_blank"
