Add Margin to Last Line

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <div class="hourly-forecast" id="hourrly-forecast"></div>
 
-      <hr />
+      <hr class="line" />
 
       <div class="daily-forecast" id="daily-forecast"></div>
     </div>
