Change Feels Like Unit

--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
         </div>
         <div class="col">
           <div class="detail">
-            <div class="feels">Feels Like <span id="feels"></span>°C</div>
+            <div class="feels">
+              Feels Like <span id="feels"></span
+              ><span id="feels-like-degree">°C</span>
+            </div>
           </div>
         </div>
         <div class="col detail">Pressure <span id="pressure"> </span> mb</div>
