--- a/index.html
+++ b/index.html
@@ -125,11 +125,17 @@
           aria-label="radio toggle button group"
         >
           <input type="radio" class="btn-check btn-outline-secondary" checked />
-          <label class="btn btn-outline-secondary" for="vbtn-radio1"
+          <label
+            class="btn btn-outline-secondary"
+            for="vbtn-radio1"
+            style="--bs-btn-padding-x: 5px"
             >Temperature</label
           >
           <input type="radio" class="btn-check btn-outline-secondary" />
-          <label class="btn btn-outline-secondary" for="vbtn-radio2"
+          <label
+            class="btn btn-outline-secondary"
+            for="vbtn-radio2"
+            style="--bs-btn-padding-x: 35px"
             >Wind</label
           >
         </div>
