--- a/index.html
+++ b/index.html
@@ -126,19 +126,33 @@
         <div
           class="btn-group"
           role="group"
-          aria-label="radio toggle button group"
+          aria-label="Basic radio toggle button group"
         >
-          <input type="radio" class="btn-check btn-outline-secondary" checked />
+          <input
+            type="radio"
+            class="btn-check btn-outline-secondary"
+            name="btnradio"
+            id="btnradio1"
+            autocomplete="off"
+            checked
+          />
           <label
             class="btn btn-outline-secondary"
-            for="vbtn-radio1"
+            for="btnradio1"
             style="--bs-btn-padding-x: 5px"
             >Temperature</label
           >
-          <input type="radio" class="btn-check btn-outline-secondary" />
+
+          <input
+            type="radio"
+            class="btn-check btn-outline-secondary"
+            name="btnradio"
+            id="btnradio2"
+            autocomplete="off"
+          />
           <label
             class="btn btn-outline-secondary"
-            for="vbtn-radio2"
+            for="btnradio2"
             style="--bs-btn-padding-x: 35px"
             >Wind</label
           >
